# olio-ohjelmointi

h1/: main.cpp
h2a/: CMakeLists.txt  main.cpp
h2b/: main.cpp
h3a/: CMakeLists.txt  ItalianChef.cpp  ItalianChef.h  chef.cpp  chef.h  main.cpp  main_eläimelle.cpp
h3b/: Animal.cpp  Animal.h  CMakeLists.txt  Dog.cpp  Dog.h  main.cpp
h4/: CMakeLists.txt  car.cpp  car.h  engine.h  main.cpp  wheel.cpp  wheel.h
h5/: AggregationA.cpp  AggregationA.h  AssosiationA.cpp  AssosiationA.h  CMakeLists.txt  ClassB.cpp  ClassB.h  main.cpp
